<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_edtab_fight"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.foxelectron.foxedpad.Fragment_EDTab_Fight">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/stringButtonChaff"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_chaff"
            android:layout_weight="1"
            style="@style/Button" />

        <Button
            android:text="@string/stringButtonHeat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_heat"
            android:layout_weight="1"
            style="@style/Button" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:text="@string/stringButtonLastWaypoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_lastWaypoint"
                style="@style/Button" />

            <Button
                android:text="@string/stringButton_HighWake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_highWake"
                style="@style/Button" />

            <Button
                android:text="@string/stringButton_LowWake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_lowWake"
                style="@style/Button" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/stringButton_Preferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_pref"
                style="@style/Button" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
